<resources>
    <string name="app_name">JDS Weather</string>
    <string name="hint_insert_full_name">Masukkan Nama Lengkap</string>
    <string name="note_welcome_message">Selamat Datang di aplikasi Jabar Digital Service Weather. Silahkan mengisi data untuk mendapatkan info cuaca</string>
    <string name="proses">Proses</string>
    <string name="select_location">Pilih Lokasi</string>
    <string name="location_selected">Lokasi Terpilih</string>
    <string name="province">Provinsi</string>
    <string name="city">Kota</string>
    <string name="select_city">Pilih Kota</string>
    <string name="err_msg_name_empty">Masukkan Nama</string>
    <string name="err_msg_failed_load_data">Maaf koneksi bermasalah</string>
    <string name="note_forecast">Prakiraan Cuaca 5 Hari Kedepan</string>
</resources>