<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash_screen_logo"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/note_welcome_message"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextTextName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_insert_full_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <LinearLayout
            android:id="@+id/layoutSelectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/button_choice_background"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:text="@string/select_location"
                android:textColor="@color/black"
                tools:text="@string/select_location" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
        </LinearLayout>

        <Button
            android:id="@+id/button_proses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/proses"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

</ScrollView>